# district13

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
core/: administration.cpp  administration.h  district.cpp  district.h  factor.cpp  factor.h  game.cpp  game.h
core/events/: event.cpp  event.h
core/sites/: building.cpp  building.h  house.cpp  house.h  industrialbuilding.cpp  industrialbuilding.h  publicbuilding.cpp  publicbuilding.h  site.cpp  site.h
gui/: actionswidget.cpp  actionswidget.h  builddialog.cpp  builddialog.h  eventlogger.cpp  eventlogger.h  gameinfowidget.cpp  gameinfowidget.h  mainwindow.cpp  mainwindow.h  minimap.cpp  minimap.h  siteinfodialog.cpp  siteinfodialog.h
res/: resources.qrc
